--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "axios": "0.18.0",
     "bootstrap": "4.1.1",
     "font-awesome": "4.7.0",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "react-scripts": "3.2.0"
   },
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "production": "webpack --progress -p NODE_ENV=production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.10"
   }
 }
