--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "4.7.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
