--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.25.2",
     "axios": "0.18.0",
     "bootstrap": "4.1.1",
     "font-awesome": "4.7.0",
     "node-sass": "^4.13.0",
+    "paginate-array": "^2.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
+    "react-paginate": "^6.3.2",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-table": "^6.10.3"
   },
   "main": "index.js",
   "scripts": {
